CSS padding shift fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -129,7 +129,7 @@ strong {
         border-left: 1px solid $light-gray;
         border-right: 1px solid $light-gray;
         margin: 0;
-        padding: 0 30px;
+        padding: 0px 31px;
         cursor: pointer;
       }
 
@@ -137,15 +137,16 @@ strong {
         border-top: 1px solid $light-gray;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
-        padding-top: 10px;
+        padding-top: 11px;
+        margin-top: 1px;
       }
 
       p:last-child {
         border-bottom: 1px solid $light-gray;
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
-        padding-bottom: 10px;
-        margin-bottom: 10px;
+        padding-bottom: 11px;
+        margin-bottom: 11px;
       }
 
       .points {
@@ -161,12 +162,16 @@ strong {
       p {
         border-left: 2px solid $secondary-color;
         border-right: 2px solid $secondary-color;
+        padding-left: 30px;
+        padding-right: 30px;
       }
       p:first-child {
         border-top: 2px solid $secondary-color;
+        padding-top: 10px;
       }
       p:last-child {
         border-bottom: 2px solid $secondary-color;
+        padding-bottom: 10px;
       }
     }
 
@@ -176,12 +181,16 @@ strong {
         border-right: 2px solid $secondary-color;
         background-color: $secondary-color;
         color: #fff;
+        padding-left: 30px;
+        padding-right: 30px;
       }
       p:first-child {
         border-top: 2px solid $secondary-color;
+        padding-top: 10px;
       }
       p:last-child {
         border-bottom: 2px solid $secondary-color;
+        padding-bottom: 10px;
       }
     } 
 
